# Cross-City-Lovers-Agent

./: .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml
app/: __init__.py
app/api/: __init__.py  main.py
app/api/routes/: health.py  planning.py
app/core/: __init__.py  config.py  constants.py  logger.py
app/domain/: __init__.py  enums.py  models.py
app/prompts/: candidate_generator.txt  explanation_generator.txt  intent_parser.txt
app/providers/: __init__.py
app/providers/transport/: __init__.py  base.py  estimated_provider.py
app/repositories/: __init__.py  city_repository.py
app/schemas/: __init__.py  request.py  response.py
app/services/: __init__.py  candidate_service.py  intent_service.py  pairing_service.py  recommendation_service.py  scoring_service.py  transport_service.py
app/utils/: __init__.py  score_utils.py  time_utils.py
app/workflows/: __init__.py  state.py  travel_meet_graph.py
config/: secrets.example.toml  settings.toml
data/cities/: city_master.json
data/profiles/: city_profiles.json
data/transport/: rail_access_seed.json
docs/: development_design.md
scripts/: bootstrap_env.ps1  start_local.ps1
tests/: __init__.py  test_api.py  test_services.py  test_workflow.py
