[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-city-lovers-agent"
version = "0.1.0"
description = "LLM 驱动的异地情侣智能汇合出行规划系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.8,<3.0",
    "langgraph>=0.2,<1.0",
    "tomli>=2.0,<3.0; python_version < '3.11'"
]

[tool.setuptools.packages.find]
include = ["app*"]
